月次コスト取得APIを実装
