# internal/api/handlers.go
@@ -28,6 +28,47 @@ func (s *Server) getApiV1CostsTypes(ctx context.Context) (*GetCostsTypesResponse
 	}, nil
 }
 
+func (s *Server) getApiV1CostsMonthly(ctx context.Context, param *GetApiV1CostsMonthlyParams) (*GetMonthlyCostsResponse, error) {
+	q := db.New(s.db)
+	cond := db.FindMonthlyCostsCondition{CostTypeID: uint64(param.CostTypeId)}
+	if param.BeginYear != nil {
+		v := uint32(*param.BeginYear)
+		cond.BeginYear = &v
+	}
+	if param.BeginMonth != nil {
+		v := uint32(*param.BeginMonth)
+		cond.BeginMonth = &v
+	}
+	if param.EndYear != nil {
+		v := uint32(*param.EndYear)
+		cond.EndYear = &v
+	}
+	if param.EndMonth != nil {
+		v := uint32(*param.EndMonth)
+		cond.EndMonth = &v
+	}
+
+	records, err := q.FindMonthlyCostsByCondition(ctx, &cond)
+	if err != nil {
+		return nil, fmt.Errorf("failed to find monthly costs: %w", err)
+	}
+
+	resp := GetMonthlyCostsResponse{
+		Costs: []Cost{},
+	}
+	for _, r := range records {
+		resp.Costs = append(resp.Costs, Cost{
+			CostTypeId:   int64(r.CostTypeID),
+			CostTypeName: r.TypeName,
+			Month:        int32(r.CostMonth),
+			Year:         int32(r.CostYear),
+			Yen:          int32(r.CostYen),
+		})
+	}
+
+	return &resp, nil
+}
+
 func (s *Server) postApiV1CostsMonthly(ctx context.Context, body *PostApiV1CostsMonthlyJSONRequestBody) (*PostMonthlyCostsResponse, error) {
 	tx, err := s.db.Begin()
 	if err != nil {
